--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,20 @@
 {
-  "name": "Sajidali Weather App",
-  "short_name": "Weather",
+  "name": "WeatherNow - Modern Weather App",
+  "short_name": "WeatherNow",
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#3a7bd5",
+  "background_color": "#121212",
   "theme_color": "#1abc9c",
-  "description": "Live weather app using city or geolocation.",
+  "description": "Get current weather and 5-day forecast based on city or location.",
   "icons": [
     {
       "src": "https://openweathermap.org/img/wn/01d.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "https://openweathermap.org/img/wn/01d.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
